Support for IdP4

--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <!--
   Copyright 2017 Michael Simon
-  
+
   Licensed under the Apache License, Version 2.0 (the "License"); you may not
   use this file except in compliance with the License.  You may obtain a copy
   of the License at
-  
+
     http://www.apache.org/licenses/LICENSE-2.0
-  
+
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
   WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the
@@ -18,12 +18,20 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.kit.scc</groupId>
 	<artifactId>shib-2fa</artifactId>
-	<version>0.2.0-SNAPSHOT</version>
+	<version>4.0.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
+	<name>LinOTP authentication module for Shibboleth</name>
+	<url>https://github.com/cyber-simon/idp-auth-linotp/</url>
 	<parent>
 		<groupId>net.shibboleth.idp</groupId>
 		<artifactId>idp-parent</artifactId>
-		<version>3.3.0</version>
+		<version>4.0.0</version>
 	</parent>
+
+
+	<properties>
+    <automatic.module.name>edu.kit.scc.linotp</automatic.module.name>
+  </properties>
 
 	<dependencies>
 		<dependency>
@@ -41,13 +49,18 @@
 			<artifactId>idp-authn-impl</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
+		<dependency>
+		    <groupId>javax.json</groupId>
+		    <artifactId>javax.json-api</artifactId>
+		    <version>1.1.4</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
 		<repository>
 			<id>central</id>
 			<name>Maven Plugin Repository</name>
-			<url>http://central.maven.org/maven2</url>
+			<url>https://repo1.maven.org/maven2/</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
